# ironclaw

./: Cargo.toml
.github/workflows/: test.yml
crates/ironclaw_architecture/tests/: reborn_dependency_boundaries.rs
crates/ironclaw_auth/src/: lib.rs
crates/ironclaw_extensions/src/: lib.rs  v2.rs
crates/ironclaw_extensions/tests/: extension_contract.rs  manifest_v2_contract.rs
crates/ironclaw_host_runtime/: Cargo.toml
crates/ironclaw_host_runtime/tests/: host_runtime_services_contract.rs
crates/ironclaw_loop_support/src/: capability_port.rs  lib.rs
crates/ironclaw_memory/: Cargo.toml
crates/ironclaw_memory/tests/: e2e_hybrid_search.rs  e2e_scope_isolation_safety.rs
crates/ironclaw_product_adapter_registry/src/: lib.rs
crates/ironclaw_product_workflow/: CLAUDE.md  Cargo.toml
crates/ironclaw_product_workflow/src/: api.rs  fakes.rs  lib.rs  webui_service.rs
crates/ironclaw_product_workflow/tests/: webui_service_contract.rs
crates/ironclaw_reborn/: Cargo.toml
crates/ironclaw_reborn/src/: lib.rs  model_gateway.rs  model_routes.rs  production_readiness.rs
crates/ironclaw_reborn/tests/: llm_gateway.rs  loop_driver_host.rs  model_routes.rs
crates/ironclaw_reborn_cli/tests/: smoke.rs
crates/ironclaw_reborn_composition/: Cargo.toml
crates/ironclaw_reborn_composition/src/: lib.rs  llm_catalog.rs  runtime.rs  runtime_input.rs
crates/ironclaw_reborn_composition/tests/: runtime.rs
crates/ironclaw_resources/: Cargo.toml
crates/ironclaw_resources/src/: lib.rs
crates/ironclaw_resources/tests/: resource_governor_contract.rs
crates/ironclaw_secrets/src/: db.rs
crates/ironclaw_secrets/tests/: db_credential_store_contract.rs
crates/ironclaw_turns/tests/: agent_loop_host_contract.rs  checkpoint_state_store_contract.rs
crates/ironclaw_wasm_product_adapters/: CLAUDE.md  Cargo.toml
crates/ironclaw_wasm_product_adapters/src/: component_runtime.rs  store.rs
crates/ironclaw_wasm_product_adapters/tests/: component_runtime_contract.rs
crates/ironclaw_wasm_product_adapters/wit/: product_adapter.wit
crates/ironclaw_wasm_sandbox_core/src/: lib.rs
docs/reborn/: how-to-port-tool-to-reborn.md
docs/reborn/contracts/: product-adapters.md  resources.md
tests/: e2e_trace_memory_isolation.rs  reborn_identity_prompt_scope_isolation_parity.rs
tests/support/: test_rig.rs
(+11 files in other folders)
